--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,8 +21,7 @@ add_library(test_lib_unit OBJECT ${test_srcs_unit})
 target_link_libraries(test_lib_unit PUBLIC
     cradle_websocket
     cradle_plugins_typing
-    cradle_plugins_inner
-    fakeit::fakeit)
+    cradle_plugins_inner)
 
 # Add the unit test runner.
 add_executable(unit_test_runner)
@@ -31,7 +30,7 @@ target_sources(unit_test_runner PRIVATE
     support/outer_service.cpp
     support/thinknode.cpp)
 target_include_directories(unit_test_runner PUBLIC
-    ${generated_src_dirs}
+    ${generated_src_dir}
     src)
 target_link_libraries(unit_test_runner PRIVATE
     test_lib_runner
@@ -97,7 +96,7 @@ add_executable(external_test_runner)
 target_sources(external_test_runner PRIVATE
     support/outer_service.cpp)
 target_include_directories(external_test_runner PUBLIC
-    ${generated_src_dirs}
+    ${generated_src_dir}
     src)
 target_link_libraries(external_test_runner PRIVATE
     test_lib_external
@@ -149,7 +148,7 @@ target_sources(all_unit_tests_runner PRIVATE
     support/outer_service.cpp
     support/thinknode.cpp)
 target_include_directories(all_unit_tests_runner PUBLIC
-    ${generated_src_dirs}
+    ${generated_src_dir}
     src)
 target_link_libraries(all_unit_tests_runner
     test_lib_runner
@@ -205,7 +204,7 @@ target_link_libraries(test_lib_benchmark PUBLIC
 
 add_executable(benchmark_test_runner)
 target_sources(benchmark_test_runner PRIVATE
-    support/inner_service.cpp 
+    support/inner_service.cpp
     support/outer_service.cpp)
 target_link_libraries(benchmark_test_runner PRIVATE
     test_lib_benchmark
