--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Configure
       run: >
         cmake -Bbuild -DCMAKE_BUILD_TYPE=${{matrix.config}}
-        -D"CMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
+        -D"CMAKE_TOOLCHAIN_FILE=$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
         -DCRADLE_PREPROCESSOR_USAGE=External
         -DCRADLE_EXTERNALLY_PREPROCESSED_DIRECTORY=preprocessed
         -DCRADLE_LOCAL_DOCKER_TESTING=OFF
