Add CMake Config output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -544,3 +544,10 @@ install(
     FILE CradleTargets.cmake
     NAMESPACE cradle::
     DESTINATION lib/cmake/cradle)
+
+configure_file(cmake/CradleConfig.cmake.in CradleConfig.cmake @ONLY)
+install(
+    FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/CradleConfig.cmake"
+        # TODO: "${CMAKE_CURRENT_BINARY_DIR}/MyLibConfigVersion.cmake"
+    DESTINATION lib/cmake/Config)
