Update find_package modes

--- a/cmake/CradleConfig.cmake.in
+++ b/cmake/CradleConfig.cmake.in
@@ -6,21 +6,19 @@ include(CMakeFindDependencyMacro)
 # Find dependencies.
 find_dependency(Boost REQUIRED COMPONENTS
     filesystem program_options)
-find_dependency(Catch2 REQUIRED)
-find_dependency(nlohmann_json REQUIRED)
-find_dependency(msgpack REQUIRED)
-find_dependency(CURL REQUIRED)
+find_dependency(nlohmann_json CONFIG REQUIRED)
+find_dependency(msgpack CONFIG REQUIRED)
+find_dependency(CURL CONFIG REQUIRED)
 find_dependency(OpenSSL REQUIRED)
 find_dependency(SQLite3 REQUIRED)
-find_dependency(websocketpp REQUIRED)
-find_dependency(yaml-cpp REQUIRED)
-find_dependency(spdlog REQUIRED)
-find_dependency(simdjson REQUIRED)
-find_dependency(lz4 REQUIRED)
-find_dependency(cereal REQUIRED)
-find_dependency(benchmark REQUIRED)
-find_dependency(rpclib REQUIRED)
-find_dependency(tomlplusplus REQUIRED)
+find_dependency(websocketpp CONFIG REQUIRED)
+find_dependency(yaml-cpp CONFIG REQUIRED)
+find_dependency(spdlog CONFIG REQUIRED)
+find_dependency(simdjson CONFIG REQUIRED)
+find_dependency(lz4 CONFIG REQUIRED)
+find_dependency(cereal CONFIG REQUIRED)
+find_dependency(rpclib CONFIG REQUIRED)
+find_dependency(tomlplusplus CONFIG REQUIRED)
 
 # Any extra setup.
 # TODO
