--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,21 +89,21 @@ FetchContent_MakeAvailable(fetched_cppcoro)
 
 find_package(Boost REQUIRED COMPONENTS
     filesystem program_options)
-find_package(Catch2 REQUIRED)
-find_package(nlohmann_json REQUIRED)
-find_package(msgpack REQUIRED)
-find_package(CURL REQUIRED)
+find_package(Catch2 CONFIG REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(msgpack CONFIG REQUIRED)
+find_package(CURL CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(SQLite3 REQUIRED)
-find_package(websocketpp REQUIRED)
-find_package(yaml-cpp REQUIRED)
-find_package(spdlog REQUIRED)
-find_package(simdjson REQUIRED)
-find_package(lz4 REQUIRED)
-find_package(cereal REQUIRED)
-find_package(benchmark REQUIRED)
-find_package(rpclib REQUIRED)
-find_package(tomlplusplus REQUIRED)
+find_package(websocketpp CONFIG REQUIRED)
+find_package(yaml-cpp CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
+find_package(simdjson CONFIG REQUIRED)
+find_package(lz4 CONFIG REQUIRED)
+find_package(cereal CONFIG REQUIRED)
+find_package(benchmark CONFIG REQUIRED)
+find_package(rpclib CONFIG REQUIRED)
+find_package(tomlplusplus CONFIG REQUIRED)
 
 # Add the given linker options on anything that gets linked.
 macro(add_link_options )
