Remove executables from install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -569,7 +569,7 @@ if(CRADLE_INSTALL)
         TARGETS
             cradle_inner cradle_typing cradle_plugins_typing cradle_thinknode
             cradle_plugins_thinknode cradle_rpclib_client cradle_websocket
-            cradle_external websocket_server rpclib_server
+            cradle_external
         EXPORT CradleTargets
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
