--- a/cmake/CradleConfig.cmake.in
+++ b/cmake/CradleConfig.cmake.in
@@ -20,7 +20,7 @@ find_dependency(cereal CONFIG REQUIRED)
 find_dependency(rpclib CONFIG REQUIRED)
 find_dependency(tomlplusplus CONFIG REQUIRED)
 
-include("${CMAKE_CURRENT_LIST_DIR}/FindCoroutines.cmake")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
 find_dependency(Coroutines QUIET REQUIRED)
 
 # Add the targets file.
