--- a/cmake/CradleConfig.cmake.in
+++ b/cmake/CradleConfig.cmake.in
@@ -20,9 +20,8 @@ find_dependency(cereal CONFIG REQUIRED)
 find_dependency(rpclib CONFIG REQUIRED)
 find_dependency(tomlplusplus CONFIG REQUIRED)
 
-# TODO: Don't bring these along as dependencies.
+# TODO: Don't bring this along as a transitive/non-testing dependency.
 find_dependency(Catch2 CONFIG REQUIRED)
-find_dependency(benchmark CONFIG REQUIRED)
 
 # This is to find cppcoro's dependencies.
 # TODO: Remove this once cppcoro is installed in a more reasonable way.
